--- a/paginas/404.html
+++ b/paginas/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sportivo Devoto | Home</title>
+    <title>Sportivo Devoto | Contacto</title>
     <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,47 +13,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <meta name="keywords" content="gimnasio, musculacion, pesas, ejercicio, entrenamiento, dieta, salud">
-    <meta name="description" content="Sportivo Devoto te desafiamos a entrenar de forma accesible, fomentando los buenos vinculos y la interaccion como comunidad. Contamos con actividades Indoor/Outdoor. ">
+    <meta name="keywords" content="gimnasio, musculacion, respuesta, pregunta, informacion, saber mas, pesas, boxeo, crossfit, spinning, zumba, futbol, football, ejercicio, entrenamiento, dieta, salud">
+    <meta name="description" content="Sportivo Devoto te respondera tu consulta lo antes posible y en 24 horas habiles desde el dia que ha sido efectuada tu pregunta ">
   </head>
-  <body class="body">
+  <body class="bodyBg">
     <header class="headerInicio">
       <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-          <a class="navbar-brand text-light " href="#">Sportivo <span class="rojo">Devoto</span>
+          <a class="navbar-brand text-light" href="../index.html">Sportivo <span class="rojo">Devoto</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              
               <li class="nav-item">
-                <a class="nav-link text-light" href="./paginas/precios.html">Precios</a>
+                <a class="nav-link text-light" href="./precios.html">Precios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./paginas/actividades.html">Actividades</a>
+                <a class="nav-link text-light" href="./actividades.html">Actividades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./paginas/galeria.html">Horarios</a>
+                <a class="nav-link text-light" href="./galeria.html">Horarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./paginas/contacto.html">Contacto</a>
+                <a class="nav-link text-light" href="#">Contacto</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main class="inicio">
-      <h1>muchas gracias por enviar tu consulta, a la brevedad nos estaremos comunicando con vos</h1>
-
-      <script>
-
-            setTimeout(function(){
-                window.location.replace("../index.html"); 
-            },2000)
-      </script>
+    <main class="error">
+        <div class="contenedor">
+            <h2>Oops! Pagina no encontrada</h2>
+            <h1>404 </h1>
+            <p>No pudimos encontrar la pagina que estabas buscando</p>
+            <a href="../index.html"> Volver al incio</a>
+          </div>
     </main>
     <footer class="pie-pagina">
       <div class="grupo-1">
@@ -87,4 +84,4 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
-</html>
+  </html>
