--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <meta name="keywords" content="gimnasio, musculacion, respuesta, pregunta, informacion, saber mas, pesas, boxeo, crossfit, spinning, zumba, futbol, football, ejercicio, entrenamiento, dieta, salud">
     <meta name="description" content="Sportivo Devoto te respondera tu consulta lo antes posible y en 24 horas habiles desde el dia que ha sido efectuada tu pregunta ">
