--- a/paginas/exito.html
+++ b/paginas/exito.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <meta name="keywords" content="gimnasio, musculacion, pesas, ejercicio, entrenamiento, dieta, salud">
     <meta name="description" content="Sportivo Devoto te desafiamos a entrenar de forma accesible, fomentando los buenos vinculos y la interaccion como comunidad. Contamos con actividades Indoor/Outdoor. ">
@@ -29,17 +29,16 @@
             <ul class="navbar-nav">
               
               <li class="nav-item">
-                <a class="nav-link text-light link--3" href="./paginas/precios.html">Precios</a>
-                
+                <a class="nav-link text-light" href="./paginas/precios.html">Precios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light link--3" href="./paginas/actividades.html">Actividades</a>
+                <a class="nav-link text-light" href="./paginas/actividades.html">Actividades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light link--3" href="./paginas/galeria.html">Horarios</a>
+                <a class="nav-link text-light" href="./paginas/galeria.html">Horarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light link--3" href="./paginas/contacto.html">Contacto</a>
+                <a class="nav-link text-light" href="./paginas/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -47,32 +46,14 @@
       </nav>
     </header>
     <main class="inicio">
-      <section class="hero carousel-hero">
-        <div id="homeHerocarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#homeHerocarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#homeHerocarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active img-fluid" style="background-image: url(./imagenes/inicio3.jpg);">
-              <div class="text-center">
-                <h1 class="hero-headline white text-center text-light">Todo lo que buscas en un solo gimnasio</h1>
-                <h3 class="hero-subhead white text-center">
-                  <a href="./paginas/contacto.html" class="boton_inicio">Contacto</a>
-                </h3>
-              </div>
-            </div>
-            <div class="carousel-item img-fluid" style="background-image: url(./imagenes/inicio6.png)">
-              <div class="text-center">
-                <h1 class="hero-headline white text-center">Todo lo que buscas en un solo gimnasio</h1>
-                <h3 class="hero-subhead white text-center">
-                  <a href="./paginas/contacto.html" class="boton_inicio">Contacto</a>
-                </h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <h1>muchas gracias por enviar tu consulta, a la brevedad nos estaremos comunicando con vos</h1>
+
+      <script>
+
+            setTimeout(function(){
+                window.location.replace("../index.html"); 
+            },2000)
+      </script>
     </main>
     <footer class="pie-pagina">
       <div class="grupo-1">
@@ -104,6 +85,5 @@
         </small>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
